simulation_log.txt
  File "/Users/physicsinman/Library/Mobile Documents/com~apple~CloudDocs/Documents/Physics/Physics_3rd_Year/5th Semester/Dissertation/simulation/run_full_simulation_chunked.py", line 12
    print('
           ^
SyntaxError: EOL while scanning string literal
